搜索框长度调整

--- a/Boot/src/main/resources/static/index.html
+++ b/Boot/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="在Sensa中搜索" aria-label="搜索" v-model="query">
+                <input class="form-control mr-sm-2" type="search" placeholder="在Sensa中搜索" aria-label="搜索" v-model="query" style="width: 300px;">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" v-on:click.prevent="search">搜索</button>
             </form>
         </div>
